--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <dir align="left" style="margin-right:20px"><h1 style="font-size: 35px;"> वर  </h1>
  <h1 style="font-size: 35px;">चि.जुगल</h1>
  <h1 style="font-size: 20px;">(software Engineer)</h1><br>
- <dir  style="margin-top:-200">
- <dir style="margin-right:30px"><img src="/storage/emulated/0/DCIM/Screenshots/Screenshot_2023-12-21-21-15-37-10_a23b203fd3aafc6dcb84e438dda678b6.jpg" height="350"width="350" style="border-radius:35%">
+ <dir  style="margin-top:-200px">
+ <dir style="margin-right:140px"><img src="/storage/emulated/0/DCIM/Screenshots/Screenshot_2023-12-21-21-15-37-10_a23b203fd3aafc6dcb84e438dda678b6.jpg" height="350"width="350" style="border-radius:35%">
  
  
  
