--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <dir align="left" style="margin-bottom:-200">
 <dir align="left" style="margin-right:20px"><h1 style="font-size: 35px;"> वर  </h1>
  <h1 style="font-size: 35px;">चि.जुगल</h1>
- <h1 style="font-size: 20px;">(software Engineer)</h1><br>
+ <h1 style="font-size: 20px;">(software Engineer)</h1></dir></dir><br>
  <dir  style="margin-top:-200px">
  <dir style="margin-right:140px"><img src="/storage/emulated/0/DCIM/Screenshots/Screenshot_2023-12-21-21-15-37-10_a23b203fd3aafc6dcb84e438dda678b6.jpg" height="350"width="350" style="border-radius:35%">
- 
+ </dir></dir>
  
  
 
